--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gulp-template",
+  "name": "gulp-ejs-template",
   "version": "3.0.0",
   "description": "gulp-builder for web layout",
   "main": "gulpfile.js",
@@ -25,9 +25,6 @@
     "gulp-prettier": "^6.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.4",
-    "gulp-rev": "^11.0.0",
-    "gulp-rev-delete-original": "^0.2.3",
-    "gulp-rev-rewrite": "^6.0.0",
     "gulp-sass": "^5.1.0",
     "prettier": "3.2.5",
     "prettier-plugin-ejs": "^1.0.3",
